Bug 480264 - Plasma shell (Temporarily) freezes, and shutdown (Through kicker) is no longer possible
Summary: Plasma shell (Temporarily) freezes, and shutdown (Through kicker) is no longe...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-performance (other bugs)
Version First Reported In: 5.92.0
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-24 11:26 UTC by Steve Cossette
Modified: 2024-02-02 16:40 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Steve Cossette 2024-01-24 11:26:27 UTC
This bug, once triggers, results in the following:

1- Once you try to shutdown (I haven't tried logout/reboot), plasma shell (i.e. Kicker, the application bar -- the whole shell) freezes for roughly 2 minutes. Applications running can still be interacted with though, so the computer is not fully frozen. Once the UI unfreezes, the system simply does not shut down.
2- Shutdown is no longer possible (See #1).

Here's how to reproduce:

1- Start something in Konsole, anything (I just did sudo journalctl -f)
2- Try to shut down. Konsole will warn you that something is running, cancel out of it to not reboot.
3- You'll see a Plasma Workspace notification about Konsole not closing. Ignore it.
4- Simply try to shutdown again. (The desktop will just freeze at that point).

From then on, if you need to reboot, you need to sudo shutdown -r now.
Comment 1 Nate Graham 2024-01-29 22:17:52 UTC
At step 2, I don't even see the warning that something is till running in Konsole. :/
Comment 2 Alessandro Astone 2024-01-29 22:45:28 UTC
Like Nate my Konsole is not prompting me that a process is still running...
But i can reproduce with a blank new file in KWrite
Comment 3 Alessandro Astone 2024-01-29 22:47:11 UTC
The desktop seems to come back responsive after 30-60 seconds
Comment 4 Nate Graham 2024-01-30 00:30:40 UTC
"30-60 seconds" suggests a DBus timeout somewhere to me.
Comment 5 Bug Janitor Service 2024-01-30 00:45:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3839
Comment 6 Alessandro Astone 2024-01-30 13:08:05 UTC
@nate Regarding the konsole not prompting for confirmation thing, i think it is simply a matter of having ticked the box "Do not ask again" at some point, as `rm ~/.config/konsolerc` made it show up again for me. This is also available in the GUI as Settings > Configure Konsole... > Enable all "Don't Ask Again" messages
Comment 7 Nate Graham 2024-01-30 17:57:03 UTC
I don't think so. I get prompted if I run `journalctl -f` in a tab and try to quit the app normally. And Just to be safe, I clicked the Enable all "Don't Ask Again" messages button and then restarted the machine with `journalctl -f` still running; no change; it just gets killed immediately. I also had Kate open with an unsaved doc with changes, and that got killed too.
Comment 8 Alessandro Astone 2024-01-30 17:59:00 UTC
Ah ok, that I cannot reproduce. My issue was konsole not prompting probably because i had asked it not to previously.
Comment 9 David Edmundson 2024-02-02 16:39:09 UTC
Git commit f51691f6a147b549109dc50d92b28ae6a42fbab5 by David Edmundson, on behalf of Alessandro Astone.
Committed on 02/02/2024 at 16:21.
Pushed by aleasto into branch 'master'.

logout-greeter: Always answer dbus calls

Since "shutdown: Introduce support for KWin closing wayland windows"
plasma-shutdown is running for the whole time the KWin notification
is visible waiting for the user to choose whether to abort or
continue the logout.

If the user ignores the notification and clicks again to logout
we would hang the desktop while waiting for logout-greeter to answer.

M  +7    -0    logout-greeter/greeter.cpp
M  +0    -5    logout-greeter/main.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f51691f6a147b549109dc50d92b28ae6a42fbab5
Comment 10 Alessandro Astone 2024-02-02 16:40:07 UTC
Git commit a40d7fdb93eb23fa7f6d006d30dc1cf0159c0316 by Alessandro Astone.
Committed on 02/02/2024 at 16:39.
Pushed by aleasto into branch 'Plasma/6.0'.

logout-greeter: Always answer dbus calls

Since "shutdown: Introduce support for KWin closing wayland windows"
plasma-shutdown is running for the whole time the KWin notification
is visible waiting for the user to choose whether to abort or
continue the logout.

If the user ignores the notification and clicks again to logout
we would hang the desktop while waiting for logout-greeter to answer.

M  +7    -0    logout-greeter/greeter.cpp
M  +0    -5    logout-greeter/main.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/a40d7fdb93eb23fa7f6d006d30dc1cf0159c0316